<resources>
    <string name="app_name">YouTube</string>
    <string name="profile">Profile</string>
    <string name="preview">Preview</string>
    <string name="viewed">Viewed</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title">Title</string>
    <string name="_0">0</string>
    <string name="placeholder">Placeholder</string>
    <string name="channel">Channel</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection Error</string>
    <string name="sign_up">Sign up!</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect!</string>

    <string name="just_now">Just now</string>
    <string name="x_seconds_ago">%1$d seconds ago</string>
    <string name="one_second_ago">1 second ago</string>
    <string name="x_minutes_ago">%1$d minutes ago</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="x_hours_ago">%1$d hours ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="x_days_ago">%1$d days ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="x_months_ago">%1$d months ago</string>
    <string name="one_month_ago">1 month ago</string>
    <string name="x_years_ago">%1$d years ago</string>
    <string name="one_year_ago">1 year ago</string>
    <string name="no_video_contents">No video contents</string>
    <string name="icon">Icon</string>
</resources>