<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" />
        <import type="com.example.youtube.service.models.LiveDataInfo" />

        <variable
            name="viewModel"
            type="com.example.youtube.ui.video_content_list.ListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contents_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.status == LiveDataInfo.LOADED_SUCCESSFUL ? View.VISIBLE : View.GONE}">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.status == LiveDataInfo.ERROR ? View.VISIBLE : View.GONE}">

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/error"
                android:src="@drawable/ic_warning"
                app:layout_constraintBottom_toTopOf="@id/error_info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/error_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.status == LiveDataInfo.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_video_contents"
            android:textSize="18sp"
            android:visibility="@{viewModel.status == LiveDataInfo.LOADED_EMPTY ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>