<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_content"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_margin="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/preview_card"
        android:layout_width="352dp"
        android:layout_height="198dp"
        app:cardCornerRadius="12dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/short_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/video_content_background"
            android:contentDescription="@string/preview"
            android:background="@color/white"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/short_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/preview_card"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/channel_avatar_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/right_side">

            <ImageView
                android:id="@+id/channel_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_channel"
                android:contentDescription="@string/channel"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/right_side"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/channel_avatar_card"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_side">
            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_side"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/channel"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/info_side"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteY="5dp"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/info_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/channel"
                    app:layout_constraintRight_toRightOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/counter_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/time_container"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <ImageView
                            android:id="@+id/eye_icon"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_eye"
                            android:contentDescription="@string/viewed"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/counter"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <TextView
                            android:id="@+id/counter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/_0"
                            app:layout_constraintLeft_toRightOf="@id/eye_icon"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">
                        </TextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/time_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toRightOf="@id/counter_container"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <ImageView
                            android:id="@+id/clock_icon"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_clock"
                            android:contentDescription="@string/time"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/time"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/placeholder"
                            app:layout_constraintLeft_toRightOf="@id/clock_icon"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">
                        </TextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>